--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@types/node": "^9.4.1",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.14",
     "gh-pages": "^1.1.0",
+    "react-redux": "^5.0.6",
     "react-scripts-ts": "2.13.0",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "typescript": "^2.7.1"
   },
   "scripts": {
