--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
+    "clipboard-copy": "^1.4.2",
     "gh-pages": "^1.1.0",
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.13.0",
