--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@blueprintjs/core": "^2.0.0-rc.1",
+    "@blueprintjs/icons": "^2.0.0-rc.1",
     "@types/jest": "^22.1.1",
     "@types/node": "^9.4.1",
     "@types/react": "^16.0.36",
